France, Germany, Serbia, Russia, Mexico, etc.

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,5 +1,30 @@
 ﻿l_english:
  
+ BAL_communism:0 "United Baltic States"
+ BAL_communism_ADJ:0 "Baltic "
+ BAL_communism_DEF:0 "The United Baltic States"
+ BAL_radical_socialism:0 "Socialist Baltic States"
+ BAL_radical_socialism_ADJ:0 "Baltic "
+ BAL_radical_socialism_DEF:0 "The Socialist Baltic States"
+ BAL_social_democrat:0 "Baltic States"
+ BAL_social_democrat_ADJ:0 "Baltic "
+ BAL_social_democrat_DEF:0 "The Baltic States"
+ BAL_market_liberalism:0 "Baltic States"
+ BAL_market_liberalism_ADJ:0 "Baltic "
+ BAL_market_liberalism_DEF:0 "The Baltic States"
+ BAL_social_conservatism:0 "Baltic States"
+ BAL_social_conservatism_ADJ:0 "Baltic "
+ BAL_social_conservatism_DEF:0 "The Baltic States"
+ BAL_authoritarian_government:0 "Baltic States"
+ BAL_authoritarian_government_ADJ:0 "Baltic "
+ BAL_authoritarian_government_DEF:0 "The Baltic States"
+ BAL_paternal_autocrat:0 "Baltic States"
+ BAL_paternal_autocrat_ADJ:0 "Baltic "
+ BAL_paternal_autocrat_DEF:0 "The Baltic States"
+ BAL_radical_nationalism:0 "Baltic States"
+ BAL_radical_nationalism_ADJ:0 "Baltic "
+ BAL_radical_nationalism_DEF:0 "The Baltic States"
+ 
  BNA_communism:0 "Union of North America"
  BNA_communism_ADJ:0 "American "
  BNA_communism_DEF:0 "The Union of North America"
@@ -24,6 +49,132 @@
  BNA_radical_nationalism:0 "Free America"
  BNA_radical_nationalism_ADJ:0 "American "
  BNA_radical_nationalism_DEF:0 "The Free America"
+ 
+ CRO_communism:0 "Socialist Republic of Croatia"
+ CRO_communism_ADJ:0 "Croatian "
+ CRO_communism_DEF:0 "The Socialist Republic of Croatia"
+ CRO_radical_socialism:0 "Socialist Republic of Croatia"
+ CRO_radical_socialism_ADJ:0 "Croatian "
+ CRO_radical_socialism_DEF:0 "The Socialist Republic of Croatia"
+ CRO_social_democrat:0 "Republic of Croatia"
+ CRO_social_democrat_ADJ:0 "Croatian "
+ CRO_social_democrat_DEF:0 "The Republic of Croatia"
+ CRO_market_liberalism:0 "Republic of Croatia"
+ CRO_market_liberalism_ADJ:0 "Croatian "
+ CRO_market_liberalism_DEF:0 "The Republic of Croatia"
+ CRO_social_conservatism:0 "Republic of Croatia"
+ CRO_social_conservatism_ADJ:0 "Croatian "
+ CRO_social_conservatism_DEF:0 "The Republic of Croatia"
+ CRO_authoritarian_government:0 "Republic of Croatia"
+ CRO_authoritarian_government_ADJ:0 "Croatian "
+ CRO_authoritarian_government_DEF:0 "The Republic of Croatia"
+ CRO_paternal_autocrat:0 "Kingdom of Croatia"
+ CRO_paternal_autocrat_ADJ:0 "Croatian "
+ CRO_paternal_autocrat_DEF:0 "The Kingdom of Croatia"
+ CRO_radical_nationalism:0 "Independent State of Croatia"
+ CRO_radical_nationalism_ADJ:0 "Croatian "
+ CRO_radical_nationalism_DEF:0 "The Independent State of Croatia"
+  
+  ENG_communism:0 "Union of Britain"
+ ENG_communism_ADJ:0 "British "
+ ENG_communism_DEF:0 "The Union of Britain"
+ ENG_radical_socialism:0 "Union of Britain"
+ ENG_radical_socialism_ADJ:0 "British "
+ ENG_radical_socialism_DEF:0 "The Union of Britain"
+ ENG_social_democrat:0 "British Empire"
+ ENG_social_democrat_ADJ:0 "British "
+ ENG_social_democrat_DEF:0 "The British Empire"
+ ENG_market_liberalism:0 "British Empire"
+ ENG_market_liberalism_ADJ:0 "British "
+ ENG_market_liberalism_DEF:0 "The British Empire"
+ ENG_social_conservatism:0 "British Empire"
+ ENG_social_conservatism_ADJ:0 "British "
+ ENG_social_conservatism_DEF:0 "The British Empire"
+ ENG_authoritarian_government:0 "The Commonwealth"
+ ENG_authoritarian_government_ADJ:0 "British "
+ ENG_authoritarian_government_DEF:0 "The Commonwealth"
+ ENG_paternal_autocrat:0 "British Empire"
+ ENG_paternal_autocrat_ADJ:0 "British "
+ ENG_paternal_autocrat_DEF:0 "The British Empire"
+ ENG_radical_nationalism:0 "British Empire"
+ ENG_radical_nationalism_ADJ:0 "British "
+ ENG_radical_nationalism_DEF:0 "The British Empire"
+ 
+ FRA_communism:0 "French Commune"
+ FRA_communism_ADJ:0 "French "
+ FRA_communism_DEF:0 "The French Commune"
+ FRA_radical_socialism:0 "French Commune"
+ FRA_radical_socialism_ADJ:0 "French "
+ FRA_radical_socialism_DEF:0 "The French Commune"
+ FRA_social_democrat:0 "French Republic"
+ FRA_social_democrat_ADJ:0 "French "
+ FRA_social_democrat_DEF:0 "The French Republic"
+ FRA_market_liberalism:0 "French Republic"
+ FRA_market_liberalism_ADJ:0 "French "
+ FRA_market_liberalism_DEF:0 "The French Republic"
+ FRA_social_conservatism:0 "French Republic"
+ FRA_social_conservatism_ADJ:0 "French "
+ FRA_social_conservatism_DEF:0 "The French Republic"
+ FRA_authoritarian_government:0 "French Republic"
+ FRA_authoritarian_government_ADJ:0 "French "
+ FRA_authoritarian_government_DEF:0 "The French Republic"
+ FRA_paternal_autocrat:0 "Kingdom of France"
+ FRA_paternal_autocrat_ADJ:0 "French "
+ FRA_paternal_autocrat_DEF:0 "The Kingdom of France"
+ FRA_radical_nationalism:0 "Independent State of France"
+ FRA_radical_nationalism_ADJ:0 "French "
+ FRA_radical_nationalism_DEF:0 "The Independent State of France"
+ 
+ GER_communism:0 "Worker's Republic of Germany"
+ GER_communism_ADJ:0 "German "
+ GER_communism_DEF:0 "The Worker's Republic of Germany"
+ GER_radical_socialism:0 "Worker's Republic of Germany"
+ GER_radical_socialism_ADJ:0 "German "
+ GER_radical_socialism_DEF:0 "The Worker's Republic of Germany"
+ GER_social_democrat:0 "Weimar Republic"
+ GER_social_democrat_ADJ:0 "German "
+ GER_social_democrat_DEF:0 "The Weimar Republic"
+ GER_market_liberalism:0 "Weimar Republic"
+ GER_market_liberalism_ADJ:0 "German "
+ GER_market_liberalism_DEF:0 "The Weimar Republic"
+ GER_social_conservatism:0 "Weimar Republic"
+ GER_social_conservatism_ADJ:0 "German "
+ GER_social_conservatism_DEF:0 "The Weimar Republic"
+ GER_authoritarian_government:0 "German State"
+ GER_authoritarian_government_ADJ:0 "German "
+ GER_authoritarian_government_DEF:0 "The German State"
+ GER_paternal_autocrat:0 "German Reich"
+ GER_paternal_autocrat_ADJ:0 "German "
+ GER_paternal_autocrat_DEF:0 "The German Reich"
+ GER_radical_nationalism:0 "German Reich"
+ GER_radical_nationalism_ADJ:0 "German "
+ GER_radical_nationalism_DEF:0 "The German Reich"
+ 
+  MEX_communism:0 "United Mexican States"
+ MEX_communism_ADJ:0 "Mexican "
+ MEX_communism_DEF:0 "The United Mexican States"
+ MEX_radical_socialism:0 "Socialist States of Mexico"
+ MEX_radical_socialism_ADJ:0 "Mexican "
+ MEX_radical_socialism_DEF:0 "The Socialist States of Mexico"
+ MEX_social_democrat:0 "Second Mexican Republic"
+ MEX_social_democrat_ADJ:0 "Mexican "
+ MEX_social_democrat_DEF:0 "The Second Mexican Republic"
+ MEX_market_liberalism:0 "Second Mexican Republic"
+ MEX_market_liberalism_ADJ:0 "Mexican "
+ MEX_market_liberalism_DEF:0 "The Second Mexican Republic"
+ MEX_social_conservatism:0 "Second Mexican Republic"
+ MEX_social_conservatism_ADJ:0 "Mexican "
+ MEX_social_conservatism_DEF:0 "The Second Mexican Republic"
+ MEX_authoritarian_government:0 "Second Mexican Republic"
+ MEX_authoritarian_government_ADJ:0 "Mexican "
+ MEX_authoritarian_government_DEF:0 "The Second Mexican Republic"
+ MEX_paternal_autocrat:0 "Kingdom of Mexico"
+ MEX_paternal_autocrat_ADJ:0 "Mexican "
+ MEX_paternal_autocrat_DEF:0 "The Kingdom of Mexico"
+ MEX_radical_nationalism:0 "Empire of Mexico"
+ MEX_radical_nationalism_ADJ:0 "Mexican "
+ MEX_radical_nationalism_DEF:0 "The Empire of Mexico"
+ 
  
  ROL_communism:0 "Union of Louisiana"
  ROL_communism_ADJ:0 "Louisianan "
@@ -50,7 +201,7 @@
  ROL_radical_nationalism_ADJ:0 "French "
  ROL_radical_nationalism_DEF:0 "The New French Republic"
  
- RUS_communism:0 "Union Red Siberia"
+ RUS_communism:0 "Union of Red Siberia"
  RUS_communism_ADJ:0 "Russian "
  RUS_communism_DEF:0 "The Union of Red Siberia"
  RUS_radical_socialism:0 "Socialist Federation of Siberia"
@@ -75,30 +226,55 @@
  RUS_radical_nationalism_ADJ:0 "Russian "
  RUS_radical_nationalism_DEF:0 "The Russian Empire"
  
- MEX_communism:0 "United Mexican States"
- MEX_communism_ADJ:0 "Mexican "
- MEX_communism_DEF:0 "The United Mexican States"
- MEX_radical_socialism:0 "Socialist States of Mexico"
- MEX_radical_socialism_ADJ:0 "Mexican "
- MEX_radical_socialism_DEF:0 "The Socialist States of Mexico"
- MEX_social_democrat:0 "Second Mexican Republic"
- MEX_social_democrat_ADJ:0 "Mexican "
- MEX_social_democrat_DEF:0 "The Second Mexican Republic"
- MEX_market_liberalism:0 "Second Mexican Republic"
- MEX_market_liberalism_ADJ:0 "Mexican "
- MEX_market_liberalism_DEF:0 "The Second Mexican Republic"
- MEX_social_conservatism:0 "Second Mexican Republic"
- MEX_social_conservatism_ADJ:0 "Mexican "
- MEX_social_conservatism_DEF:0 "The Second Mexican Republic"
- MEX_authoritarian_government:0 "Second Mexican Republic"
- MEX_authoritarian_government_ADJ:0 "Mexican "
- MEX_authoritarian_government_DEF:0 "The Second Mexican Republic"
- MEX_paternal_autocrat:0 "Kingdom of Mexico"
- MEX_paternal_autocrat_ADJ:0 "Mexican "
- MEX_paternal_autocrat_DEF:0 "The Kingdom of Mexico"
- MEX_radical_nationalism:0 "Empire of Mexico"
- MEX_radical_nationalism_ADJ:0 "Mexican "
- MEX_radical_nationalism_DEF:0 "The Empire of Mexico"
+ SER_communism:0 "Socialist Republic of Serbia"
+ SER_communism_ADJ:0 "Serbian "
+ SER_communism_DEF:0 "The Socialist Republic of Serbia"
+ SER_radical_socialism:0 "Socialist Republic of Serbia"
+ SER_radical_socialism_ADJ:0 "Serbian "
+ SER_radical_socialism_DEF:0 "The Socialist Republic of Serbia"
+ SER_social_democrat:0 "Kingdom of Serbia"
+ SER_social_democrat_ADJ:0 "Serbian "
+ SER_social_democrat_DEF:0 "The Kingdom of Serbia"
+ SER_market_liberalism:0 "Kingdom of Serbia"
+ SER_market_liberalism_ADJ:0 "Serbian "
+ SER_market_liberalism_DEF:0 "The Kingdom of Serbia"
+ SER_social_conservatism:0 "Kingdom of Serbia"
+ SER_social_conservatism_ADJ:0 "Serbian "
+ SER_social_conservatism_DEF:0 "The Kingdom of Serbia"
+ SER_authoritarian_government:0 "Kingdom of Serbia"
+ SER_authoritarian_government_ADJ:0 "Serbian "
+ SER_authoritarian_government_DEF:0 "The Kingdom of Serbia"
+ SER_paternal_autocrat:0 "Kingdom of Serbia"
+ SER_paternal_autocrat_ADJ:0 "Serbian "
+ SER_paternal_autocrat_DEF:0 "The Kingdom of Serbia"
+ SER_radical_nationalism:0 "Greater Serbia"
+ SER_radical_nationalism_ADJ:0 "Serbian "
+ SER_radical_nationalism_DEF:0 "The Greater Serbia"
+ 
+ SOV_communism:0 "Soviet Union"
+ SOV_communism_ADJ:0 "Soviet "
+ SOV_communism_DEF:0 "The Soviet Union"
+ SOV_radical_socialism:0 "Soviet Union"
+ SOV_radical_socialism_ADJ:0 "Soviet "
+ SOV_radical_socialism_DEF:0 "The Soviet Union"
+ SOV_social_democrat:0 "Russian Federation"
+ SOV_social_democrat_ADJ:0 "Russian "
+ SOV_social_democrat_DEF:0 "The Russian Federation"
+ SOV_market_liberalism:0 "Russian Federation"
+ SOV_market_liberalism_ADJ:0 "Russian "
+ SOV_market_liberalism_DEF:0 "The Russian Federation"
+ SOV_social_conservatism:0 "Russian Federation"
+ SOV_social_conservatism_ADJ:0 "Russian "
+ SOV_social_conservatism_DEF:0 "The Russian Federation"
+ SOV_authoritarian_government:0 "Russian Federation"
+ SOV_authoritarian_government_ADJ:0 "Russian "
+ SOV_authoritarian_government_DEF:0 "The Russian Federation"
+ SOV_paternal_autocrat:0 "Tsardom of Russia"
+ SOV_paternal_autocrat_ADJ:0 "Russian "
+ SOV_paternal_autocrat_DEF:0 "The Tsardom of Russia"
+ SOV_radical_nationalism:0 "Tsardom of Russia"
+ SOV_radical_nationalism_ADJ:0 "Russian "
+ SOV_radical_nationalism_DEF:0 "The Tsardom of Russia"
  
  SPR_communism:0 "Spanish Union"
  SPR_communism_ADJ:0 "Spanish "
@@ -115,129 +291,17 @@
  SPR_social_conservatism:0 "Kingdom of Spain"
  SPR_social_conservatism_ADJ:0 "Spanish "
  SPR_social_conservatism_DEF:0 "The Kingdom of Spain"
- SPR_authoritarian_government:0 "Kingdom of Spain"
+ SPR_authoritarian_government:0 "Spanish Empire"
  SPR_authoritarian_government_ADJ:0 "Spanish "
- SPR_authoritarian_government_DEF:0 "The Kingdom of Spain"
- SPR_paternal_autocrat:0 "Kingdom of Spain"
+ SPR_authoritarian_government_DEF:0 "The Spanish Empire"
+ SPR_paternal_autocrat:0 "Spanish Empire"
  SPR_paternal_autocrat_ADJ:0 "Spanish "
- SPR_paternal_autocrat_DEF:0 "The Kingdom of Spain"
+ SPR_paternal_autocrat_DEF:0 "The Spanish Empire"
  SPR_radical_nationalism:0 "Spanish Empire"
  SPR_radical_nationalism_ADJ:0 "Spanish "
  SPR_radical_nationalism_DEF:0 "The Spanish Empire"
 
- GER_communism:0 "Worker's Republic of Germany"
- GER_communism_ADJ:0 "German "
- GER_communism_DEF:0 "The Worker's Republic of Germany"
- GER_radical_socialism:0 "Worker's Republic of Germany"
- GER_radical_socialism_ADJ:0 "German "
- GER_radical_socialism_DEF:0 "The Worker's Republic of Germany"
- GER_social_democrat:0 "Weimar Republic"
- GER_social_democrat_ADJ:0 "German "
- GER_social_democrat_DEF:0 "The Weimar Republic"
- GER_market_liberalism:0 "Weimar Republic"
- GER_market_liberalism_ADJ:0 "German "
- GER_market_liberalism_DEF:0 "The Weimar Republic"
- GER_social_conservatism:0 "Weimar Republic"
- GER_social_conservatism_ADJ:0 "German "
- GER_social_conservatism_DEF:0 "The Weimar Republic"
- GER_authoritarian_government:0 "German State"
- GER_authoritarian_government_ADJ:0 "German "
- GER_authoritarian_government_DEF:0 "The German State"
- GER_paternal_autocrat:0 "German Reich"
- GER_paternal_autocrat_ADJ:0 "German "
- GER_paternal_autocrat_DEF:0 "The German Reich"
- GER_radical_nationalism:0 "German Reich"
- GER_radical_nationalism_ADJ:0 "German "
- GER_radical_nationalism_DEF:0 "The German Reich"
- 
- ENG_communism:0 "Union of Britain"
- ENG_communism_ADJ:0 "British "
- ENG_communism_DEF:0 "The Union of Britain"
- ENG_radical_socialism:0 "Union of Britain"
- ENG_radical_socialism_ADJ:0 "British "
- ENG_radical_socialism_DEF:0 "The Union of Britain"
- ENG_social_democrat:0 "British Empire"
- ENG_social_democrat_ADJ:0 "British "
- ENG_social_democrat_DEF:0 "The British Empire"
- ENG_market_liberalism:0 "British Empire"
- ENG_market_liberalism_ADJ:0 "British "
- ENG_market_liberalism_DEF:0 "The British Empire"
- ENG_social_conservatism:0 "British Empire"
- ENG_social_conservatism_ADJ:0 "British "
- ENG_social_conservatism_DEF:0 "The British Empire"
- ENG_authoritarian_government:0 "The Commonwealth"
- ENG_authoritarian_government_ADJ:0 "British "
- ENG_authoritarian_government_DEF:0 "The Commonwealth"
- ENG_paternal_autocrat:0 "British Empire"
- ENG_paternal_autocrat_ADJ:0 "British "
- ENG_paternal_autocrat_DEF:0 "The British Empire"
- ENG_radical_nationalism:0 "British Empire"
- ENG_radical_nationalism_ADJ:0 "British "
- ENG_radical_nationalism_DEF:0 "The British Empire"
- 
- CRO_communism:0 "Socialist Republic of Croatia"
- CRO_communism_ADJ:0 "Croatian "
- CRO_communism_DEF:0 "The Socialist Republic of Croatia"
- CRO_radical_socialism:0 "Socialist Republic of Croatia"
- CRO_radical_socialism_ADJ:0 "Croatian "
- CRO_radical_socialism_DEF:0 "The Socialist Republic of Croatia"
- CRO_social_democrat:0 "Republic of Croatia"
- CRO_social_democrat_ADJ:0 "Croatian "
- CRO_social_democrat_DEF:0 "The Republic of Croatia"
- CRO_market_liberalism:0 "Republic of Croatia"
- CRO_market_liberalism_ADJ:0 "Croatian "
- CRO_market_liberalism_DEF:0 "The Republic of Croatia"
- CRO_social_conservatism:0 "Republic of Croatia"
- CRO_social_conservatism_ADJ:0 "Croatian "
- CRO_social_conservatism_DEF:0 "The Republic of Croatia"
- CRO_authoritarian_government:0 "Republic of Croatia"
- CRO_authoritarian_government_ADJ:0 "Croatian "
- CRO_authoritarian_government_DEF:0 "The Republic of Croatia"
- CRO_paternal_autocrat:0 "Kingdom of Croatia"
- CRO_paternal_autocrat_ADJ:0 "Croatian "
- CRO_paternal_autocrat_DEF:0 "The Kingdom of Croatia"
- CRO_radical_nationalism:0 "Independent State of Croatia"
- CRO_radical_nationalism_ADJ:0 "Croatian "
- CRO_radical_nationalism_DEF:0 "The Independent State of Croatia"
- 
- BAL_communism:0 "United Baltic States"
- BAL_communism_ADJ:0 "Baltic "
- BAL_communism_DEF:0 "The United Baltic States"
- BAL_radical_socialism:0 "Socialist Baltic States"
- BAL_radical_socialism_ADJ:0 "Baltic "
- BAL_radical_socialism_DEF:0 "The Socialist Baltic States"
- BAL_social_democrat:0 "Baltic States"
- BAL_social_democrat_ADJ:0 "Baltic "
- BAL_social_democrat_DEF:0 "The Baltic States"
- BAL_market_liberalism:0 "Baltic States"
- BAL_market_liberalism_ADJ:0 "Baltic "
- BAL_market_liberalism_DEF:0 "The Baltic States"
- BAL_social_conservatism:0 "Baltic States"
- BAL_social_conservatism_ADJ:0 "Baltic "
- BAL_social_conservatism_DEF:0 "The Baltic States"
- BAL_authoritarian_government:0 "Baltic States"
- BAL_authoritarian_government_ADJ:0 "Baltic "
- BAL_authoritarian_government_DEF:0 "The Baltic States"
- BAL_paternal_autocrat:0 "Baltic States"
- BAL_paternal_autocrat_ADJ:0 "Baltic "
- BAL_paternal_autocrat_DEF:0 "The Baltic States"
- BAL_radical_nationalism:0 "Baltic States"
- BAL_radical_nationalism_ADJ:0 "Baltic "
- BAL_radical_nationalism_DEF:0 "The Baltic States"
- 
- 
- SOV_fascism:0 "Russian Empire"
- SOV_fascism_DEF:0 "The Russian Empire"
- SOV_democratic:0 "Russian Federation"
- SOV_democratic_DEF:0 "The Russian Federation"
- SOV_neutrality:0 "Russia"
- SOV_neutrality_DEF:0 "Russia"
- SOV_communism:0 "Soviet Union"
- SOV_communism_DEF:0 "The Soviet Union"
- SOV_fascism_ADJ:0 "Russian"
- SOV_democratic_ADJ:0 "Russian"
- SOV_neutrality_ADJ:0 "Russian"
- SOV_communism_ADJ:0 "Soviet"
+
  USA_fascism:0 "Free American Empire"
  USA_fascism_DEF:0 "The Free American Empire"
  USA_democratic:0 "United States"
