--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -251,7 +251,59 @@
  CRO_radical_nationalist_party:0 "RNP"
  CRO_radical_nationalist_party_long:0 "Radical Nationalist Party"
  
+ #Soviet Union
+ SOV_communism_party:0 "CP"
+ SOV_communism_party_long:0 "Communist Party"
+ SOV_radical_socialism_party:0 "RSP"
+ SOV_radical_socialism_party_long:0 "Radical Socialist Party"
+ SOV_social_democratic_party:0 "SDP"
+ SOV_social_democratic_party_long:0 "Social Democratic Party"
+ SOV_market_liberalism_party:0 "MLP"
+ SOV_market_liberalism_party_long:0 "Market Liberal Party"
+ SOV_social_conservatism_party:0 "SCP"
+ SOV_social_conservatism_party_long:0 "Social Conservative Party"
+ SOV_authoritarian_government_party:0 "CG"
+ SOV_authoritarian_government_party_long:0 "Colonial Government"
+ SOV_paternal_autocrat_party:0 "PAP"
+ SOV_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ SOV_radical_nationalist_party:0 "RNP"
+ SOV_radical_nationalist_party_long:0 "Radical Nationalist Party"
  
+ #Free Russia
+ RUS_communism_party:0 "CP"
+ RUS_communism_party_long:0 "Communist Party"
+ RUS_radical_socialism_party:0 "RSP"
+ RUS_radical_socialism_party_long:0 "Radical Socialist Party"
+ RUS_social_democratic_party:0 "SDP"
+ RUS_social_democratic_party_long:0 "Social Democratic Party"
+ RUS_market_liberalism_party:0 "MLP"
+ RUS_market_liberalism_party_long:0 "Market Liberal Party"
+ RUS_social_conservatism_party:0 "SCP"
+ RUS_social_conservatism_party_long:0 "Social Conservative Party"
+ RUS_authoritarian_government_party:0 "CG"
+ RUS_authoritarian_government_party_long:0 "Colonial Government"
+ RUS_paternal_autocrat_party:0 "PAP"
+ RUS_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ RUS_radical_nationalist_party:0 "RNP"
+ RUS_radical_nationalist_party_long:0 "Radical Nationalist Party"
+ 
+ #Serbia
+ SER_communism_party:0 "CP"
+ SER_communism_party_long:0 "Communist Party"
+ SER_radical_socialism_party:0 "RSP"
+ SER_radical_socialism_party_long:0 "Radical Socialist Party"
+ SER_social_democratic_party:0 "SDP"
+ SER_social_democratic_party_long:0 "Social Democratic Party"
+ SER_market_liberalism_party:0 "MLP"
+ SER_market_liberalism_party_long:0 "Market Liberal Party"
+ SER_social_conservatism_party:0 "SCP"
+ SER_social_conservatism_party_long:0 "Social Conservative Party"
+ SER_authoritarian_government_party:0 "CG"
+ SER_authoritarian_government_party_long:0 "Colonial Government"
+ SER_paternal_autocrat_party:0 "PAP"
+ SER_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ SER_radical_nationalist_party:0 "RNP"
+ SER_radical_nationalist_party_long:0 "Radical Nationalist Party"
  
  POL_fascism_party:0 "ONR-Falanga"
  POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
@@ -259,26 +311,11 @@
  POL_democratic_party:0 "PSL"
  POL_democratic_party_long:0 "Polskie Stronnictwo Ludowe"
  POL_neutrality_party:0 "BBWR"
- ENG_communism_party:0 "CPGB"
- ENG_democratic_party:0 "Conservative Party"
- ENG_fascism_party:0 "British Union of Fascists"
- ITA_communism_party:0 "Partito Comunista Italiano"
- ITA_democratic_party:0 "Partito Popolare Italiano"
- ITA_fascism_party:0 "Partito Nazionale Fascista"
- ITA_neutrality_party:0 "Partito Nazionale Monarchico"
- JAP_communism_party:0 "Nihon Kyosan-to"
- JAP_democratic_party:0 "Rikken Minseito"
- JAP_fascism_party:0 "Taisei Yokusankai"
  USA_communism_party:0 "Communist Party USA"
  USA_democratic_party:0 "Democratic Party"
  USA_republican_party:0 "Republican Party"
  USA_fascism_party:0 "Silver Legion of America"
- FRA_communism_party:0 "Parti Communiste Francais"
- FRA_democratic_party:0 "Parti Radical"
- FRA_fascism_party:0 "Mouvement Franciste"
- SOV_communism_party:0 "All-Union Communist Party"
- SOV_democratic_party:0 "Trudoviks"
- SOV_fascism_party:0 "RFP"
+ 
  AUS_communism_party:0 "KPÖ"
  AUS_communism_party_long:0 "Kommunistische Partei Österreichs"
  AUS_democratic_party:0 "SDAPÖ"
@@ -292,13 +329,6 @@
  CHI_fascism_party_long:0 "Reorganized National Government of the Republic of China"
  CHI_neutrality_party:0 "Kuomintang"
  XSM_neutrality_party:0 "Ma Clique"
- SPR_fascism_party:0 "Falange Española"
- SPR_democratic_party:0 "IR"
- SPR_democratic_party_long:0 "Izquierda Republicana"
- SPR_communism_party:0 "PCE"
- SPR_communism_party_long:0 "Partido Comunista de España"
- SPR_neutrality_party:0 "PRR"
- SPR_neutrality_party_long:0 "Partido Republicano Radical"
  POR_neutrality_party:0 "Estado Novo"
  POR_communism_party:0 "PCP"
  POR_communism_party_long:0 "Partido Comunista Português"
@@ -366,14 +396,6 @@
  AST_fascism_party_long:0 "Centre Party"
  AST_communism_party:0 "CPA"
  AST_communism_party_long:0 "Communist Party of Australia"
- MEX_democratic_party:0 "PAN"
- MEX_democratic_party_long:0 "Partido Acción Nacional"
- MEX_fascism_party:0 "UNS"
- MEX_fascism_party_long:0 "Unión Nacional Sinarquista"
- MEX_communism_party:0 "PCM"
- MEX_communism_party_long:0 "Partido Comunista Mexicano"
- MEX_neutrality_party:0 "PRM"
- MEX_neutrality_party_long:0 "Partido de la Revolución Mexicana"
  ARG_democratic_party:0 "UCR"
  ARG_democratic_party_long:0 "Unión Cívica Radical"
  ARG_fascism_party:0 "UNF"
@@ -417,22 +439,7 @@
  ROM_democratic_party_long:0 "Partidul National Liberal"
  ROM_fascism_party:0 "Garda de Fier"
  ROM_fascism_party_long:0 "Garda de Fier"
- YUG_communism_party:0 "KPJ"
- YUG_communism_party_long:0 "Komunisticna partija Jugoslavije"
- YUG_democratic_party:0 "Demokratska stranka"
- YUG_democratic_party_long:0 "Jugoslovanska demokratska stranka"
- YUG_neutrality_party:0 "Regency Council"
- YUG_neutrality_party_2:0 "Monarchists"
- YUG_fascism_party:0 "JRZ"
- YUG_fascism_party_long:0 "Jugoslovanska radikalna skupnost"
- SER_communism_party:0 "League of Communists"
- SER_communism_party_long:0 "League of Communists"
- SER_democratic_party:0 "Mihailovic Chetniks"
- SER_democratic_party_long:0 "Mihailovic Chetniks"
- SER_fascism_party:1 "National Salvation"
- SER_fascism_party_long:1 "Government of National Salvation"
- SER_neutrality_party:0 "Royalists"
- SER_neutrality_party_long:0 "Royalists"
+
  BUL_neutrality_party:0 "Tsar Boris loyalists"
  BUL_communism_party:0 "BCP"
  BUL_communism_party_long:0 "Bulgarian Communist Party"
@@ -550,14 +557,6 @@
  PRU_fascism_party_long:0 "Constituent Assembly"
  PRU_communism_party:0 "PCP"
  PRU_communism_party_long:0 "Partido Comunista del Perú"
- IRE_democratic_party:0 "Fianna Fáil"
- IRE_democratic_party_long:0 "Fianna Fáil, The Republican Party"
- IRE_fascism_party:0 "PNC"
- IRE_fascism_party_long:0 "Páirtí Náisiúnta Corparáidíoch"
- IRE_communism_party:0 "CPI"
- IRE_communism_party_long:0 "Páirtí Cumannach na hÉireann"
- IRE_neutrality_party:0 "Lucht Oibre"
- IRE_neutrality_party_long:0 "Páirtí an Lucht Oibre"
  AFG_neutrality_party:0 "Barakzai"
  AFG_neutrality_party_long:0 "Barakzai royal family"
  LUX_democratic_party:0 "Rietspartei"
