--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -75,7 +75,7 @@
  CRO_radical_nationalism_ADJ:0 "Croatian "
  CRO_radical_nationalism_DEF:0 "The Independent State of Croatia"
   
-  ENG_communism:0 "Union of Britain"
+ ENG_communism:0 "Union of Britain"
  ENG_communism_ADJ:0 "British "
  ENG_communism_DEF:0 "The Union of Britain"
  ENG_radical_socialism:0 "Union of Britain"
@@ -150,7 +150,7 @@
  GER_radical_nationalism_ADJ:0 "German "
  GER_radical_nationalism_DEF:0 "The German Reich"
  
-  MEX_communism:0 "United Mexican States"
+ MEX_communism:0 "United Mexican States"
  MEX_communism_ADJ:0 "Mexican "
  MEX_communism_DEF:0 "The United Mexican States"
  MEX_radical_socialism:0 "Socialist States of Mexico"
@@ -301,6 +301,30 @@
  SPR_radical_nationalism_ADJ:0 "Spanish "
  SPR_radical_nationalism_DEF:0 "The Spanish Empire"
 
+ UNI_communism:0 "United Socialist Provinces"
+ UNI_communism_ADJ:0 "Flemish "
+ UNI_communism_DEF:0 "The United Socialist Provinces"
+ UNI_radical_socialism:0 "United Socialist Provinces"
+ UNI_radical_socialism_ADJ:0 "Flemish "
+ UNI_radical_socialism_DEF:0 "The United Socialist Provinces"
+ UNI_social_democrat:0 "United Provinces"
+ UNI_social_democrat_ADJ:0 "Flemish "
+ UNI_social_democrat_DEF:0 "The United Provinces"
+ UNI_market_liberalism:0 "United Provinces"
+ UNI_market_liberalism_ADJ:0 "Flemish "
+ UNI_market_liberalism_DEF:0 "The United Provinces"
+ UNI_social_conservatism:0 "United Provinces"
+ UNI_social_conservatism_ADJ:0 "Flemish "
+ UNI_social_conservatism_DEF:0 "The United Provinces"
+ UNI_authoritarian_government:0 "United Provinces"
+ UNI_authoritarian_government_ADJ:0 "Flemish "
+ UNI_authoritarian_government_DEF:0 "United Provinces"
+ UNI_paternal_autocrat:0 "United Provinces"
+ UNI_paternal_autocrat_ADJ:0 "Flemish "
+ UNI_paternal_autocrat_DEF:0 "United Provinces"
+ UNI_radical_nationalism:0 "United Provinces"
+ UNI_radical_nationalism_ADJ:0 "Flemish "
+ UNI_radical_nationalism_DEF:0 "The United Provinces" 
 
  USA_fascism:0 "Free American Empire"
  USA_fascism_DEF:0 "The Free American Empire"
