--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -305,6 +305,24 @@
  SER_radical_nationalist_party:0 "RNP"
  SER_radical_nationalist_party_long:0 "Radical Nationalist Party"
  
+ #United Provinces
+ UNI_communism_party:0 "CP"
+ UNI_communism_party_long:0 "Communist Party"
+ UNI_radical_socialism_party:0 "RSP"
+ UNI_radical_socialism_party_long:0 "Radical Socialist Party"
+ UNI_social_democratic_party:0 "SDP"
+ UNI_social_democratic_party_long:0 "Social Democratic Party"
+ UNI_market_liberalism_party:0 "MLP"
+ UNI_market_liberalism_party_long:0 "Market Liberal Party"
+ UNI_social_conservatism_party:0 "SCP"
+ UNI_social_conservatism_party_long:0 "Social Conservative Party"
+ UNI_authoritarian_government_party:0 "CG"
+ UNI_authoritarian_government_party_long:0 "Colonial Government"
+ UNI_paternal_autocrat_party:0 "PAP"
+ UNI_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ UNI_radical_nationalist_party:0 "RNP"
+ UNI_radical_nationalist_party_long:0 "Radical Nationalist Party"
+ 
  POL_fascism_party:0 "ONR-Falanga"
  POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
  POL_communism_party:0 "Polish Socialist Party"
