--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -323,6 +323,24 @@
  UNI_radical_nationalist_party:0 "RNP"
  UNI_radical_nationalist_party_long:0 "Radical Nationalist Party"
  
+ #Australia
+ AST_communism_party:0 "CP"
+ AST_communism_party_long:0 "Communist Party"
+ AST_radical_socialism_party:0 "RSP"
+ AST_radical_socialism_party_long:0 "Radical Socialist Party"
+ AST_social_democratic_party:0 "SDP"
+ AST_social_democratic_party_long:0 "Social Democratic Party"
+ AST_market_liberalism_party:0 "MLP"
+ AST_market_liberalism_party_long:0 "Market Liberal Party"
+ AST_social_conservatism_party:0 "SCP"
+ AST_social_conservatism_party_long:0 "Social Conservative Party"
+ AST_authoritarian_government_party:0 "CG"
+ AST_authoritarian_government_party_long:0 "Colonial Government"
+ AST_paternal_autocrat_party:0 "PAP"
+ AST_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ AST_radical_nationalist_party:0 "RNP"
+ AST_radical_nationalist_party_long:0 "Radical Nationalist Party"
+ 
  POL_fascism_party:0 "ONR-Falanga"
  POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
  POL_communism_party:0 "Polish Socialist Party"
@@ -406,14 +424,6 @@
  CAN_communism_party_long:0 "Communist Party of Canada"
  CAN_neutrality_party:0 "CCF"
  CAN_neutrality_party_long:0 "Co-operative Commonwealth Federation"
- AST_neutrality_party:0 "ACP"
- AST_neutrality_party_long:0 "Australian Country Party"
- AST_democratic_party:0 "Labor"
- AST_democratic_party_long:0 "Australian Labor Party"
- AST_fascism_party:0 "Centre Party"
- AST_fascism_party_long:0 "Centre Party"
- AST_communism_party:0 "CPA"
- AST_communism_party_long:0 "Communist Party of Australia"
  ARG_democratic_party:0 "UCR"
  ARG_democratic_party_long:0 "Unión Cívica Radical"
  ARG_fascism_party:0 "UNF"
