--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,4 +1,29 @@
 ﻿l_english:
+  
+ AST_communism:0 "Worker's Republic of Australia"
+ AST_communism_ADJ:0 "Australian "
+ AST_communism_DEF:0 "The Worker's Republic of Australia"
+ AST_radical_socialism:0 "Worker's Republic of Australia"
+ AST_radical_socialism_ADJ:0 "Australian "
+ AST_radical_socialism_DEF:0 "The Worker's Republic of Australia"
+ AST_social_democratic:0 "Australian Republic"
+ AST_social_democratic_ADJ:0 "Australian "
+ AST_social_democratic_DEF:0 "The Australian Republic"
+ AST_market_liberalism:0 "Australian Republic"
+ AST_market_liberalism_ADJ:0 "Australian "
+ AST_market_liberalism_DEF:0 "The Australian Republic"
+ AST_social_conservatism:0 "Australian Republic"
+ AST_social_conservatism_ADJ:0 "Australian "
+ AST_social_conservatism_DEF:0 "The Australian Republic"
+ AST_authoritarian_government:0 "British Australia"
+ AST_authoritarian_government_ADJ:0 "Australian "
+ AST_authoritarian_government_DEF:0 "The British Australia"
+ AST_paternal_autocrat:0 "Australian Republic"
+ AST_paternal_autocrat_ADJ:0 "Australian "
+ AST_paternal_autocrat_DEF:0 "The Australian Republic"
+ AST_radical_nationalism:0 "Independent Australia"
+ AST_radical_nationalism_ADJ:0 "Australian "
+ AST_radical_nationalism_DEF:0 "The Independent Australia" 
  
  BAL_communism:0 "United Baltic States"
  BAL_communism_ADJ:0 "Baltic "
@@ -6,9 +31,9 @@
  BAL_radical_socialism:0 "Socialist Baltic States"
  BAL_radical_socialism_ADJ:0 "Baltic "
  BAL_radical_socialism_DEF:0 "The Socialist Baltic States"
- BAL_social_democrat:0 "Baltic States"
- BAL_social_democrat_ADJ:0 "Baltic "
- BAL_social_democrat_DEF:0 "The Baltic States"
+ BAL_social_democratic:0 "Baltic States"
+ BAL_social_democratic_ADJ:0 "Baltic "
+ BAL_social_democratic_DEF:0 "The Baltic States"
  BAL_market_liberalism:0 "Baltic States"
  BAL_market_liberalism_ADJ:0 "Baltic "
  BAL_market_liberalism_DEF:0 "The Baltic States"
@@ -31,24 +56,24 @@
  BNA_radical_socialism:0 "Socialist States of America"
  BNA_radical_socialism_ADJ:0 "American "
  BNA_radical_socialism_DEF:0 "The Socialist States of America"
- BNA_social_democrat:0 "British North America"
- BNA_social_democrat_ADJ:0 "American "
- BNA_social_democrat_DEF:0 "The British North America"
- BNA_market_liberalism:0 "British North America"
+ BNA_social_democratic:0 "Republic of North America"
+ BNA_social_democratic_ADJ:0 "American "
+ BNA_social_democratic_DEF:0 "Republic of North America"
+ BNA_market_liberalism:0 "Republic of North America"
  BNA_market_liberalism_ADJ:0 "American "
- BNA_market_liberalism_DEF:0 "The British North America"
- BNA_social_conservatism:0 "British North America"
+ BNA_market_liberalism_DEF:0 "The Republic of North America"
+ BNA_social_conservatism:0 "Republic of North America"
  BNA_social_conservatism_ADJ:0 "American "
- BNA_social_conservatism_DEF:0 "The British North America"
+ BNA_social_conservatism_DEF:0 "The Republic of North America"
  BNA_authoritarian_government:0 "British North America"
  BNA_authoritarian_government_ADJ:0 "American "
  BNA_authoritarian_government_DEF:0 "The British North America"
- BNA_paternal_autocrat:0 "British North America"
+ BNA_paternal_autocrat:0 "Republic of North America"
  BNA_paternal_autocrat_ADJ:0 "American "
- BNA_paternal_autocrat_DEF:0 "The British North America"
- BNA_radical_nationalism:0 "Free America"
+ BNA_paternal_autocrat_DEF:0 "The Republic of North America"
+ BNA_radical_nationalism:0 "Independent America"
  BNA_radical_nationalism_ADJ:0 "American "
- BNA_radical_nationalism_DEF:0 "The Free America"
+ BNA_radical_nationalism_DEF:0 "The Independent America"
  
  CRO_communism:0 "Socialist Republic of Croatia"
  CRO_communism_ADJ:0 "Croatian "
@@ -56,9 +81,9 @@
  CRO_radical_socialism:0 "Socialist Republic of Croatia"
  CRO_radical_socialism_ADJ:0 "Croatian "
  CRO_radical_socialism_DEF:0 "The Socialist Republic of Croatia"
- CRO_social_democrat:0 "Republic of Croatia"
- CRO_social_democrat_ADJ:0 "Croatian "
- CRO_social_democrat_DEF:0 "The Republic of Croatia"
+ CRO_social_democratic:0 "Republic of Croatia"
+ CRO_social_democratic_ADJ:0 "Croatian "
+ CRO_social_democratic_DEF:0 "The Republic of Croatia"
  CRO_market_liberalism:0 "Republic of Croatia"
  CRO_market_liberalism_ADJ:0 "Croatian "
  CRO_market_liberalism_DEF:0 "The Republic of Croatia"
@@ -81,9 +106,9 @@
  ENG_radical_socialism:0 "Union of Britain"
  ENG_radical_socialism_ADJ:0 "British "
  ENG_radical_socialism_DEF:0 "The Union of Britain"
- ENG_social_democrat:0 "British Empire"
- ENG_social_democrat_ADJ:0 "British "
- ENG_social_democrat_DEF:0 "The British Empire"
+ ENG_social_democratic:0 "British Empire"
+ ENG_social_democratic_ADJ:0 "British "
+ ENG_social_democratic_DEF:0 "The British Empire"
  ENG_market_liberalism:0 "British Empire"
  ENG_market_liberalism_ADJ:0 "British "
  ENG_market_liberalism_DEF:0 "The British Empire"
@@ -106,9 +131,9 @@
  FRA_radical_socialism:0 "French Commune"
  FRA_radical_socialism_ADJ:0 "French "
  FRA_radical_socialism_DEF:0 "The French Commune"
- FRA_social_democrat:0 "French Republic"
- FRA_social_democrat_ADJ:0 "French "
- FRA_social_democrat_DEF:0 "The French Republic"
+ FRA_social_democratic:0 "French Republic"
+ FRA_social_democratic_ADJ:0 "French "
+ FRA_social_democratic_DEF:0 "The French Republic"
  FRA_market_liberalism:0 "French Republic"
  FRA_market_liberalism_ADJ:0 "French "
  FRA_market_liberalism_DEF:0 "The French Republic"
@@ -131,9 +156,9 @@
  GER_radical_socialism:0 "Worker's Republic of Germany"
  GER_radical_socialism_ADJ:0 "German "
  GER_radical_socialism_DEF:0 "The Worker's Republic of Germany"
- GER_social_democrat:0 "Weimar Republic"
- GER_social_democrat_ADJ:0 "German "
- GER_social_democrat_DEF:0 "The Weimar Republic"
+ GER_social_democratic:0 "Weimar Republic"
+ GER_social_democratic_ADJ:0 "German "
+ GER_social_democratic_DEF:0 "The Weimar Republic"
  GER_market_liberalism:0 "Weimar Republic"
  GER_market_liberalism_ADJ:0 "German "
  GER_market_liberalism_DEF:0 "The Weimar Republic"
@@ -150,15 +175,40 @@
  GER_radical_nationalism_ADJ:0 "German "
  GER_radical_nationalism_DEF:0 "The German Reich"
  
+ ITA_communism:0 "Italian Socialist Republic"
+ ITA_communism_ADJ:0 "Italian "
+ ITA_communism_DEF:0 "The Italian Socialist Republic"
+ ITA_radical_socialism:0 "Italian Socialist Republic"
+ ITA_radical_socialism_ADJ:0 "Italian "
+ ITA_radical_socialism_DEF:0 "The Italian Socialist Republic"
+ ITA_social_democratic:0 "Italian Socialist Republicc"
+ ITA_social_democratic_ADJ:0 "Italian "
+ ITA_social_democratic_DEF:0 "The Italian Socialist Republic"
+ ITA_market_liberalism:0 "Italian Republic"
+ ITA_market_liberalism_ADJ:0 "Italian "
+ ITA_market_liberalism_DEF:0 "The Italian Republic"
+ ITA_social_conservatism:0 "Italian Republic"
+ ITA_social_conservatism_ADJ:0 "Italian "
+ ITA_social_conservatism_DEF:0 "The Italian Republic"
+ ITA_authoritarian_government:0 "Italian Republic"
+ ITA_authoritarian_government_ADJ:0 "Italian "
+ ITA_authoritarian_government_DEF:0 "The Italian Republic"
+ ITA_paternal_autocrat:0 "Kingdom of Italy"
+ ITA_paternal_autocrat_ADJ:0 "Italian "
+ ITA_paternal_autocrat_DEF:0 "The Kingdom of Italy"
+ ITA_radical_nationalism:0 "Kingdom of Italy"
+ ITA_radical_nationalism_ADJ:0 "Italian "
+ ITA_radical_nationalism_DEF:0 "The Kingdom of Italy"
+ 
  MEX_communism:0 "United Mexican States"
  MEX_communism_ADJ:0 "Mexican "
  MEX_communism_DEF:0 "The United Mexican States"
  MEX_radical_socialism:0 "Socialist States of Mexico"
  MEX_radical_socialism_ADJ:0 "Mexican "
  MEX_radical_socialism_DEF:0 "The Socialist States of Mexico"
- MEX_social_democrat:0 "Second Mexican Republic"
- MEX_social_democrat_ADJ:0 "Mexican "
- MEX_social_democrat_DEF:0 "The Second Mexican Republic"
+ MEX_social_democratic:0 "Second Mexican Republic"
+ MEX_social_democratic_ADJ:0 "Mexican "
+ MEX_social_democratic_DEF:0 "The Second Mexican Republic"
  MEX_market_liberalism:0 "Second Mexican Republic"
  MEX_market_liberalism_ADJ:0 "Mexican "
  MEX_market_liberalism_DEF:0 "The Second Mexican Republic"
@@ -175,16 +225,15 @@
  MEX_radical_nationalism_ADJ:0 "Mexican "
  MEX_radical_nationalism_DEF:0 "The Empire of Mexico"
  
- 
  ROL_communism:0 "Union of Louisiana"
  ROL_communism_ADJ:0 "Louisianan "
  ROL_communism_DEF:0 "The Union of Louisiana"
  ROL_radical_socialism:0 "Socialist Federation of America"
  ROL_radical_socialism_ADJ:0 "Louisianan "
  ROL_radical_socialism_DEF:0 "The Socialist Federation of America"
- ROL_social_democrat:0 "Republic of Louisiana"
- ROL_social_democrat_ADJ:0 "Louisianan "
- ROL_social_democrat_DEF:0 "The Republic of Louisiana"
+ ROL_social_democratic:0 "Republic of Louisiana"
+ ROL_social_democratic_ADJ:0 "Louisianan "
+ ROL_social_democratic_DEF:0 "The Republic of Louisiana"
  ROL_market_liberalism:0 "Republic of Louisiana"
  ROL_market_liberalism_ADJ:0 "Louisianan "
  ROL_market_liberalism_DEF:0 "The Republic of Louisiana"
@@ -207,9 +256,9 @@
  RUS_radical_socialism:0 "Socialist Federation of Siberia"
  RUS_radical_socialism_ADJ:0 "Russian "
  RUS_radical_socialism_DEF:0 "The Socialist Federation of Siberia"
- RUS_social_democrat:0 "Free Russia"
- RUS_social_democrat_ADJ:0 "Russian "
- RUS_social_democrat_DEF:0 "The Free Russia"
+ RUS_social_democratic:0 "Free Russia"
+ RUS_social_democratic_ADJ:0 "Russian "
+ RUS_social_democratic_DEF:0 "The Free Russia"
  RUS_market_liberalism:0 "Free Russia"
  RUS_market_liberalism_ADJ:0 "Russian "
  RUS_market_liberalism_DEF:0 "The Free Russia"
@@ -232,9 +281,9 @@
  SER_radical_socialism:0 "Socialist Republic of Serbia"
  SER_radical_socialism_ADJ:0 "Serbian "
  SER_radical_socialism_DEF:0 "The Socialist Republic of Serbia"
- SER_social_democrat:0 "Kingdom of Serbia"
- SER_social_democrat_ADJ:0 "Serbian "
- SER_social_democrat_DEF:0 "The Kingdom of Serbia"
+ SER_social_democratic:0 "Kingdom of Serbia"
+ SER_social_democratic_ADJ:0 "Serbian "
+ SER_social_democratic_DEF:0 "The Kingdom of Serbia"
  SER_market_liberalism:0 "Kingdom of Serbia"
  SER_market_liberalism_ADJ:0 "Serbian "
  SER_market_liberalism_DEF:0 "The Kingdom of Serbia"
@@ -257,9 +306,9 @@
  SOV_radical_socialism:0 "Soviet Union"
  SOV_radical_socialism_ADJ:0 "Soviet "
  SOV_radical_socialism_DEF:0 "The Soviet Union"
- SOV_social_democrat:0 "Russian Federation"
- SOV_social_democrat_ADJ:0 "Russian "
- SOV_social_democrat_DEF:0 "The Russian Federation"
+ SOV_social_democratic:0 "Russian Federation"
+ SOV_social_democratic_ADJ:0 "Russian "
+ SOV_social_democratic_DEF:0 "The Russian Federation"
  SOV_market_liberalism:0 "Russian Federation"
  SOV_market_liberalism_ADJ:0 "Russian "
  SOV_market_liberalism_DEF:0 "The Russian Federation"
@@ -282,9 +331,9 @@
  SPR_radical_socialism:0 "Socialist Federation of Spain"
  SPR_radical_socialism_ADJ:0 "Spanish "
  SPR_radical_socialism_DEF:0 "The Socialist Federation of Spain"
- SPR_social_democrat:0 "Spanish Republic"
- SPR_social_democrat_ADJ:0 "Spanish "
- SPR_social_democrat_DEF:0 "The Spanish Republic"
+ SPR_social_democratic:0 "Spanish Republic"
+ SPR_social_democratic_ADJ:0 "Spanish "
+ SPR_social_democratic_DEF:0 "The Spanish Republic"
  SPR_market_liberalism:0 "Spanish Republic"
  SPR_market_liberalism_ADJ:0 "Spanish "
  SPR_market_liberalism_DEF:0 "The Spanish Republic"
@@ -307,9 +356,9 @@
  UNI_radical_socialism:0 "United Socialist Provinces"
  UNI_radical_socialism_ADJ:0 "Flemish "
  UNI_radical_socialism_DEF:0 "The United Socialist Provinces"
- UNI_social_democrat:0 "United Provinces"
- UNI_social_democrat_ADJ:0 "Flemish "
- UNI_social_democrat_DEF:0 "The United Provinces"
+ UNI_social_democratic:0 "United Provinces"
+ UNI_social_democratic_ADJ:0 "Flemish "
+ UNI_social_democratic_DEF:0 "The United Provinces"
  UNI_market_liberalism:0 "United Provinces"
  UNI_market_liberalism_ADJ:0 "Flemish "
  UNI_market_liberalism_DEF:0 "The United Provinces"
@@ -1048,18 +1097,6 @@
  YUN_democratic_ADJ:0 "Yunnanese"
  YUN_neutrality_ADJ:0 "Yunnanese"
  YUN_communism_ADJ:0 "Yunnanese"
- AST_fascism:0 "Centralist Australia"
- AST_fascism_DEF:0 "Centralist Australia"
- AST_democratic:0 "Australia"
- AST_democratic_DEF:0 "Australia"
- AST_neutrality:0 "Emu Empire"
- AST_neutrality_DEF:0 "The Emu Empire"
- AST_communism:0 "Australian People's Republic"
- AST_communism_DEF:0 "The Australian People's Republic"
- AST_fascism_ADJ:0 "Australian"
- AST_democratic_ADJ:0 "Australian"
- AST_neutrality_ADJ:0 "Australian"
- AST_communism_ADJ:0 "Australian"
  NZL_fascism:0 "Kiwi Empire"
  NZL_fascism_DEF:0 "The Kiwi Empire"
  NZL_democratic:0 "New Zealand"
