--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -16,7 +16,7 @@
  AST_social_conservatism_ADJ:0 "Australian "
  AST_social_conservatism_DEF:0 "The Australian Republic"
  AST_authoritarian_government:0 "British Australia"
- AST_authoritarian_government_ADJ:0 "Australian "
+ AST_authoritarian_government_ADJ:0 "British Australian "
  AST_authoritarian_government_DEF:0 "The British Australia"
  AST_paternal_autocrat:0 "Australian Republic"
  AST_paternal_autocrat_ADJ:0 "Australian "
@@ -50,8 +50,30 @@
  BAL_radical_nationalism_ADJ:0 "Baltic "
  BAL_radical_nationalism_DEF:0 "The Baltic States"
  
+ BAM_communism:0 "Socialist United Arab States"
+ BAM_communism_ADJ:0 "Arabic "
+ BAM_communism_DEF:0 "The Socialist United Arab States"
+ BAM_radical_socialism:0 "Socialist United Arab States"
+ BAM_radical_socialism_ADJ:0 "Arabic "
+ BAM_radical_socialism_DEF:0 "The Socialist United Arab States"
+ BAM_social_democratic:0 "Arabian Provinces"
+ BAM_social_democratic_ADJ:0 "Arabic "
+ BAM_social_democratic_DEF:0 "The Arabian Provinces"
+ BAM_market_liberalism:0 "Arabian Provinces"
+ BAM_market_liberalism_ADJ:0 "Arabic "
+ BAM_market_liberalism_DEF:0 "The Arabian Provinces"
+ BAM_social_conservatism:0 "Arabian Provinces"
+ BAM_social_conservatism_ADJ:0 "Arabic "
+ BAM_social_conservatism_DEF:0 "The Arabian Provinces"
  BAM_authoritarian_government:0 "British Arabian Mandate"
+ BAM_authoritarian_government_ADJ:0 "British Arabic "
  BAM_authoritarian_government_DEF:0 "The British Arabian Mandate" 
+ BAM_paternal_autocrat:0 "Greater Arabia"
+ BAM_paternal_autocrat_ADJ:0 "Arabic "
+ BAM_paternal_autocrat_DEF:0 "Greater Arabia"
+ BAM_radical_nationalism:0 "Greater Arabia"
+ BAM_radical_nationalism_ADJ:0 "Arabic "
+ BAM_radical_nationalism_DEF:0 "The Greater Arabia"
  
  BNA_communism:0 "Union of North America"
  BNA_communism_ADJ:0 "American "
@@ -69,7 +91,7 @@
  BNA_social_conservatism_ADJ:0 "American "
  BNA_social_conservatism_DEF:0 "The Republic of North America"
  BNA_authoritarian_government:0 "British North America"
- BNA_authoritarian_government_ADJ:0 "American "
+ BNA_authoritarian_government_ADJ:0 "British American "
  BNA_authoritarian_government_DEF:0 "The British North America"
  BNA_paternal_autocrat:0 "Republic of North America"
  BNA_paternal_autocrat_ADJ:0 "American "
@@ -378,18 +400,7 @@
  UNI_radical_nationalism_ADJ:0 "Flemish "
  UNI_radical_nationalism_DEF:0 "The United Provinces" 
 
- USA_fascism:0 "Free American Empire"
- USA_fascism_DEF:0 "The Free American Empire"
- USA_democratic:0 "United States"
- USA_democratic_DEF:0 "The United States"
- USA_neutrality:0 "Confederate States"
- USA_neutrality_DEF:0 "The Confederate States"
- USA_communism:0 "Communist States of America"
- USA_communism_DEF:0 "The Communist States of America"
- USA_fascism_ADJ:0 "American"
- USA_democratic_ADJ:0 "American"
- USA_neutrality_ADJ:0 "American"
- USA_communism_ADJ:0 "American"
+
  SWE_fascism:0 "Svea Rike"
  SWE_fascism_DEF:0 "Svea Rike"
  SWE_democratic:0 "Sweden"
