--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -341,6 +341,24 @@
  AST_radical_nationalist_party:0 "RNP"
  AST_radical_nationalist_party_long:0 "Radical Nationalist Party"
  
+ #Austria
+ AUS_communism_party:0 "CP"
+ AUS_communism_party_long:0 "Communist Party"
+ AUS_radical_socialism_party:0 "RSP"
+ AUS_radical_socialism_party_long:0 "Radical Socialist Party"
+ AUS_social_democratic_party:0 "SDP"
+ AUS_social_democratic_party_long:0 "Social Democratic Party"
+ AUS_market_liberalism_party:0 "MLP"
+ AUS_market_liberalism_party_long:0 "Market Liberal Party"
+ AUS_social_conservatism_party:0 "SCP"
+ AUS_social_conservatism_party_long:0 "Social Conservative Party"
+ AUS_authoritarian_government_party:0 "CG"
+ AUS_authoritarian_government_party_long:0 "Colonial Government"
+ AUS_paternal_autocrat_party:0 "PAP"
+ AUS_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ AUS_radical_nationalist_party:0 "RNP"
+ AUS_radical_nationalist_party_long:0 "Radical Nationalist Party"
+ 
  POL_fascism_party:0 "ONR-Falanga"
  POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
  POL_communism_party:0 "Polish Socialist Party"
@@ -352,12 +370,7 @@
  USA_republican_party:0 "Republican Party"
  USA_fascism_party:0 "Silver Legion of America"
  
- AUS_communism_party:0 "KPÖ"
- AUS_communism_party_long:0 "Kommunistische Partei Österreichs"
- AUS_democratic_party:0 "SDAPÖ"
- AUS_democratic_party_long:0 "Sozialdemokratische Partei Österreichs"
- AUS_fascism_party:1 "DNSAP"
- AUS_neutrality_party:1 "Vaterländische Front"
+ 
  CHI_communism_party:0 "CPC"
  CHI_communism_party_long:0 "Communist Party of China"
  CHI_democratic_party:0 "China Democratic League"
