--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -25,6 +25,44 @@
  AST_radical_nationalism_ADJ:0 "Australian "
  AST_radical_nationalism_DEF:0 "The Independent Australia" 
  
+ AUS_fascism:0 "Deutschsozialen Austria"
+ AUS_fascism_DEF:0 "Deutschsozialen Austria"
+ AUS_neutrality:0 "Austria"
+ AUS_neutrality_DEF:0 "Austria"
+ AUS_democratic:0 "Republic of Austria"
+ AUS_democratic_DEF:0 "The Republic of Austria"
+ AUS_communism:0 "Austrian Soviet Republic"
+ AUS_communism_DEF:0 "The Austrian Soviet Republic"
+ AUS_fascism_ADJ:0 "Austrian"
+ AUS_neutrality_ADJ:0 "Austrian"
+ AUS_democratic_ADJ:0 "Austrian"
+ AUS_communism_ADJ:0 "Austrian"
+ 
+ AST_communism:0 "People's Republic of Austria"
+ AST_communism_ADJ:0 "Austrian "
+ AST_communism_DEF:0 "The People's Republic of Austria"
+ AST_radical_socialism:0 "People's Republic of Austria"
+ AST_radical_socialism_ADJ:0 "Austrian "
+ AST_radical_socialism_DEF:0 "The People's Republic of Austria"
+ AST_social_democratic:0 "Republic of Austria"
+ AST_social_democratic_ADJ:0 "Austrian "
+ AST_social_democratic_DEF:0 "The Republic of Austria"
+ AST_market_liberalism:0 "Republic of Austria"
+ AST_market_liberalism_ADJ:0 "Austrian "
+ AST_market_liberalism_DEF:0 "The Republic of Austria"
+ AST_social_conservatism:0 "Republic of Austria"
+ AST_social_conservatism_ADJ:0 "Austrian "
+ AST_social_conservatism_DEF:0 "The Republic of Austria"
+ AST_authoritarian_government:0 "Republic of Austria"
+ AST_authoritarian_government_ADJ:0 "Austrian "
+ AST_authoritarian_government_DEF:0 "The Republic of Austria"
+ AST_paternal_autocrat:0 "Kingdom of Austria"
+ AST_paternal_autocrat_ADJ:0 "Austrian "
+ AST_paternal_autocrat_DEF:0 "The Kingdom of Austria"
+ AST_radical_nationalism:0 "Austrian Reich"
+ AST_radical_nationalism_ADJ:0 "Austrian "
+ AST_radical_nationalism_DEF:0 "The Austrian Reich" 
+ 
  BAL_communism:0 "United Baltic States"
  BAL_communism_ADJ:0 "Baltic "
  BAL_communism_DEF:0 "The United Baltic States"
@@ -413,18 +451,7 @@
  SWE_democratic_ADJ:0 "Swedish"
  SWE_neutrality_ADJ:0 "Swedish"
  SWE_communism_ADJ:0 "Swedish"
- FRA_fascism:1 "Nation Française"
- FRA_fascism_DEF:1 "Nation Française"
- FRA_democratic:0 "France"
- FRA_democratic_DEF:0 "France"
- FRA_neutrality:0 "Bourbon France"
- FRA_neutrality_DEF:0 "Bourbon France"
- FRA_communism:0 "French Commune"
- FRA_communism_DEF:0 "The French Commune"
- FRA_fascism_ADJ:1 "French"
- FRA_democratic_ADJ:0 "French"
- FRA_neutrality_ADJ:0 "French"
- FRA_communism_ADJ:0 "French"
+
  LUX_fascism:0 "Luxembourg"
  LUX_fascism_DEF:0 "Luxembourg"
  LUX_democratic:0 "Luxembourg"
@@ -485,18 +512,7 @@
  POL_democratic_ADJ:0 "Polish"
  POL_communism_ADJ:0 "Polish"
  POL_neutrality_ADJ:0 "Polish"
- AUS_fascism:0 "Deutschsozialen Austria"
- AUS_fascism_DEF:0 "Deutschsozialen Austria"
- AUS_neutrality:0 "Austria"
- AUS_neutrality_DEF:0 "Austria"
- AUS_democratic:0 "Republic of Austria"
- AUS_democratic_DEF:0 "The Republic of Austria"
- AUS_communism:0 "Austrian Soviet Republic"
- AUS_communism_DEF:0 "The Austrian Soviet Republic"
- AUS_fascism_ADJ:0 "Austrian"
- AUS_neutrality_ADJ:0 "Austrian"
- AUS_democratic_ADJ:0 "Austrian"
- AUS_communism_ADJ:0 "Austrian"
+
  LIT_fascism:0 "Iron Wolf Lithuania"
  LIT_fascism_DEF:0 "Iron Wolf Lithuania"
  LIT_neutrality:0 "Lithuania"
