--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -163,6 +163,31 @@
  CRO_radical_nationalism_ADJ:0 "Croatian "
  CRO_radical_nationalism_DEF:0 "The Independent State of Croatia"
   
+ CZE_communism:0 "Czechoslovak Socialist Republic"
+ CZE_communism_ADJ:0 "Czechoslovakian "
+ CZE_communism_DEF:0 "The Czechoslovak Socialist Republic"
+ CZE_radical_socialism:0 "Czechoslovak Socialist Republic"
+ CZE_radical_socialism_ADJ:0 "Czechoslovakian "
+ CZE_radical_socialism_DEF:0 "The Czechoslovak Socialist Republic"
+ CZE_social_democratic:0 "Czechoslovak Republic"
+ CZE_social_democratic_ADJ:0 "Czechoslovakian "
+ CZE_social_democratic_DEF:0 "The Czechoslovak Republic"
+ CZE_market_liberalism:0 "Czechoslovak Republic"
+ CZE_market_liberalism_ADJ:0 "Czechoslovakian "
+ CZE_market_liberalism_DEF:0 "The Czechoslovak Republic"
+ CZE_social_conservatism:0 "Czechoslovak Republic"
+ CZE_social_conservatism_ADJ:0 "Czechoslovakian "
+ CZE_social_conservatism_DEF:0 "The Czechoslovak Republic"
+ CZE_authoritarian_government:0 "Czechoslovak Republic"
+ CZE_authoritarian_government_ADJ:0 "Czechoslovakian "
+ CZE_authoritarian_government_DEF:0 "The Czechoslovak Republic"
+ CZE_paternal_autocrat:0 "Kingdom of Bohemia"
+ CZE_paternal_autocrat_ADJ:0 "Czechoslovakian "
+ CZE_paternal_autocrat_DEF:0 "The Kingdom of Bohemia"
+ CZE_radical_nationalism:0 "Kingdom of Bohemia"
+ CZE_radical_nationalism_ADJ:0 "Czechoslovakian "
+ CZE_radical_nationalism_DEF:0 "The Kingdom of Bohemia"
+ 
  ENG_communism:0 "Union of Britain"
  ENG_communism_ADJ:0 "British "
  ENG_communism_DEF:0 "The Union of Britain"
@@ -237,6 +262,32 @@
  GER_radical_nationalism:0 "German Reich"
  GER_radical_nationalism_ADJ:0 "German "
  GER_radical_nationalism_DEF:0 "The German Reich"
+ 
+ HUN_communism:0 "Republic of Councils in Hungary"
+ HUN_communism_ADJ:0 "Hungarian "
+ HUN_communism_DEF:0 "The Republic of Councils in Hungary"
+ HUN_radical_socialism:0 "Republic of Councils in Hungary"
+ HUN_radical_socialism_ADJ:0 "Hungarian "
+ HUN_radical_socialism_DEF:0 "The Republic of Councils in Hungary"
+ HUN_social_democratic:0 "Republic of Councils in Hungary"
+ HUN_social_democratic_ADJ:0 "Hungarian "
+ HUN_social_democratic_DEF:0 "The Republic of Councils in Hungary"
+ HUN_market_liberalism:0 "Hungarian Republic"
+ HUN_market_liberalism_ADJ:0 "Hungarian "
+ HUN_market_liberalism_DEF:0 "The Hungarian Republic"
+ HUN_social_conservatism:0 "Hungarian Republic"
+ HUN_social_conservatism_ADJ:0 "Hungarian "
+ HUN_social_conservatism_DEF:0 "The Hungarian Republic"
+ HUN_authoritarian_government:0 "Kingdom of Hungary"
+ HUN_authoritarian_government_ADJ:0 "Hungarian "
+ HUN_authoritarian_government_DEF:0 "The Kingdom of Hungary"
+ HUN_paternal_autocrat:0 "Kingdom of Hungary"
+ HUN_paternal_autocrat_ADJ:0 "Hungarian "
+ HUN_paternal_autocrat_DEF:0 "The Kingdom of Hungary"
+ HUN_radical_nationalism:0 "Hungarian Nation"
+ HUN_radical_nationalism_ADJ:0 "Hungarian "
+ HUN_radical_nationalism_DEF:0 "The Hungarian Nation"
+ 
  
  ITA_communism:0 "Italian Socialist Republic"
  ITA_communism_ADJ:0 "Italian "
@@ -488,18 +539,7 @@
  HOL_democratic_ADJ:0 "Dutch"
  HOL_neutrality_ADJ:0 "Dutch"
  HOL_communism_ADJ:0 "Dutch"
- CZE_fascism:0 "Bohemian Empire"
- CZE_fascism_DEF:0 "The Bohemian Empire"
- CZE_democratic:0 "Czechoslovakia"
- CZE_democratic_DEF:0 "Czechoslovakia"
- CZE_neutrality:0 "Kingdom of Bohemia"
- CZE_neutrality_DEF:0 "The Kingdom of Bohemia"
- CZE_communism:0 "Czechoslovak Union"
- CZE_communism_DEF:0 "The Czechoslovak Union"
- CZE_fascism_ADJ:0 "Czechoslovakian"
- CZE_democratic_ADJ:0 "Czechoslovakian"
- CZE_neutrality_ADJ:0 "Czechoslovakian"
- CZE_communism_ADJ:0 "Czechoslovakian"
+
  POL_fascism:0 "Falangist Poland"
  POL_fascism_DEF:0 "Falangist Poland"
  POL_democratic:0 "Polish Republic"
@@ -717,18 +757,7 @@
  IRE_democratic_ADJ:0 "Irish"
  IRE_neutrality_ADJ:0 "Irish"
  IRE_communism_ADJ:0 "Irish"
- HUN_fascism:0 "Hungary"
- HUN_fascism_DEF:0 "Hungary"
- HUN_democratic:0 "Republic of Hungary"
- HUN_democratic_DEF:0 "The Republic of Hungary"
- HUN_neutrality:0 "Kingdom of Hungary"
- HUN_neutrality_DEF:0 "Kingdom of Hungary"
- HUN_communism:0 "Hungarian People's Republic"
- HUN_communism_DEF:0 "The Hungarian People's Republic"
- HUN_fascism_ADJ:0 "Hungarian"
- HUN_democratic_ADJ:0 "Hungarian"
- HUN_neutrality_ADJ:0 "Hungarian"
- HUN_communism_ADJ:0 "Hungarian"
+
  AFG_fascism:0 "New Afghan Khanate"
  AFG_fascism_DEF:0 "The New Afghan Khanate"
  AFG_democratic:0 "Republic of Afghanistan"
