--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -359,6 +359,43 @@
  AUS_radical_nationalist_party:0 "RNP"
  AUS_radical_nationalist_party_long:0 "Radical Nationalist Party"
  
+ #Czechoslovakia
+ CZE_communism_party:0 "CP"
+ CZE_communism_party_long:0 "Communist Party"
+ CZE_radical_socialism_party:0 "RSP"
+ CZE_radical_socialism_party_long:0 "Radical Socialist Party"
+ CZE_social_democratic_party:0 "SDP"
+ CZE_social_democratic_party_long:0 "Social Democratic Party"
+ CZE_market_liberalism_party:0 "MLP"
+ CZE_market_liberalism_party_long:0 "Market Liberal Party"
+ CZE_social_conservatism_party:0 "SCP"
+ CZE_social_conservatism_party_long:0 "Social Conservative Party"
+ CZE_authoritarian_government_party:0 "CG"
+ CZE_authoritarian_government_party_long:0 "Colonial Government"
+ CZE_paternal_autocrat_party:0 "PAP"
+ CZE_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ CZE_radical_nationalist_party:0 "RNP"
+ CZE_radical_nationalist_party_long:0 "Radical Nationalist Party"
+
+ #Hungary
+ HUN_communism_party:0 "CP"
+ HUN_communism_party_long:0 "Communist Party"
+ HUN_radical_socialism_party:0 "RSP"
+ HUN_radical_socialism_party_long:0 "Radical Socialist Party"
+ HUN_social_democratic_party:0 "SDP"
+ HUN_social_democratic_party_long:0 "Social Democratic Party"
+ HUN_market_liberalism_party:0 "MLP"
+ HUN_market_liberalism_party_long:0 "Market Liberal Party"
+ HUN_social_conservatism_party:0 "SCP"
+ HUN_social_conservatism_party_long:0 "Social Conservative Party"
+ HUN_authoritarian_government_party:0 "CG"
+ HUN_authoritarian_government_party_long:0 "Colonial Government"
+ HUN_paternal_autocrat_party:0 "PAP"
+ HUN_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ HUN_radical_nationalist_party:0 "RNP"
+ HUN_radical_nationalist_party_long:0 "Radical Nationalist Party" 
+ 
+ 
  POL_fascism_party:0 "ONR-Falanga"
  POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
  POL_communism_party:0 "Polish Socialist Party"
@@ -461,17 +498,7 @@
  TUR_democratic_party_long:0 "Demokrat Parti"
  TUR_neutrality_party:0 "CHP"
  TUR_neutrality_party_long:0 "Cumhuriyet Halk Partisi"
- HUN_fascism_party:1 "Horthy Government"
- HUN_arrow_cross_party:0 "NPHM"
- HUN_arrow_cross_party_long:0 "Nyilaskeresztes Párt – Hungarista Mozgalom"
- HUN_communism_party:0 "KMP"
- HUN_communism_party_long:0 "Kommunisták Magyarországi Pártja"
- HUN_democratic_party:0 "SZDP"
- HUN_democratic_party_long:0 "Szociáldemokrata Párt"
- HUN_neutrality_party:0 "F48P"
- HUN_neutrality_party_long:0 "Függetlentségi és 48-as Párt"
- HUN_legitimists_party:0 "Legitimists"
- HUN_legitimists_party_long:0 "Legitimists"
+
  ROM_neutrality_party:0 "FRN"
  ROM_neutrality_party_long:0 "Frontul Renasterii Nationale"
  ROM_communism_party:0 "PCR"
@@ -551,10 +578,7 @@
  COL_democratic_party_long:0 "Partido Liberal Colombiano"
  COL_neutrality_party:0 "Conservador"
  COL_neutrality_party_long:0 "Partido Conservador Colombiano"
- CZE_communism_party:0 "KSC"
- CZE_communism_party_long:0 "Komunistická strana Ceskoslovenska"
- CZE_democratic_party:0 "CSNS"
- CZE_democratic_party_long:0 "Ceská strana národne sociální"
+
  CHL_fascism_party:0 "VPS"
  CHL_fascism_party_long:0 "Vanguardia Popular Socialista"
  CHL_democratic_party:0 "Partido Liberal"
